2017-08-11  Peter Stephenson  <p.stephenson@samsung.com>

	* Phil: 41527 (tweak to use heap memory): Src/module.c,
	Test/V07pcre.ztst: fix [[ ... ]]] conditions passed to modules.

2017-08-09  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: README: 5.4,1 typo fixed.

	* 41504: Src/lex.c, Src/parse.c, Test/A01grammar.ztst: make
	empty strings work in case patterns with no opening
	parenthesis.

2017-08-08  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk: update to 5.4.1-dev-0.

	* unposted: Config/verson.mk, README, Etc/FAQ.yo: update to version
	5.4.1.

	* unposted: back off 41499 as it has side effects which, while
	perfectly logical, are not what POSIX expects.

2017-08-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 41510: Doc/Zsh/params.yo: update doc for $ZSH_PATCHLEVEL.

2017-08-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 41481: Completion/Unix/Command/_df,
	Completion/Unix/Command/_mount, Completion/Unix/Type/_umountable:
	_df: Complete mounted device and mount points.

	* 41486: Completion/Unix/Command/_tmux: Correct completions of
	new-window, split-window, respawn-window, respawn-pane.

	* unposted: Config/version.mk: Post-release version number bump
	to 5.4-dev-0.

2017-08-07  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: version 5.4.

	* 41499 (with one further tweak): Src/utils.c,
	Doc/Zsh/options.yo, Test/E01options.ztst: With POSIX_STRINGS
	ignore terminating separator when splitting.

2017-08-07  Peter Stephenson  <p.stephenson@samsung.com>

	* Anthony: 41500: Doc/Zsh/mod_zutil.yo: document '-' to end
	zparseopts options.

2017-08-05  Oliver Kiddle  <opk@zsh.org>

	* 41493: Completion/Unix/Command/_git: fix to not print hash
	into terminal and update options for git 2.14

	* 41492: Completion/BSD/Command/_gstat,
	Completion/Unix/Command/_flex, Completion/Unix/Command/_sqlite,
	Completion/Unix/Command/_sudo: update options in completions
