@@ -1,3 +1,9 @@
+2017-08-14  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* Phil: 4152: Src/Modules/pcre.c, Test/V07pcre.ztst: fix big
+	with uninititialised memory in logic for extracting matched
+	parentheses.
+
 2017-08-11  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* Phil: 41527 (tweak to use heap memory): Src/module.c,
